# modern-cpp-samples

./: .gitignore  LICENSE  README.md
Lambda/: CMakeLists.txt  build_lambda.sh
Lambda/src/: Algo.cpp  Algo.h  IAlgo.h  ISensor.h  ISensorCallback.h  Sensor.cpp  Sensor.h  mainApp.cpp
Lambda/test/: testSensor.cpp
ThreadsFuturePromise/: CMakeLists.txt  README.md
ThreadsFuturePromise/source/: ISensor.h  Sensor.cpp  Sensor.h  SensorData.cpp  SensorData.h
ThreadsFuturePromise/test/: testSensor.cpp  testSensorData.cpp  testThreadFuturePromise.cpp
